<resources>
    <string name="app_name">SwuAssistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="schedule_title">课程表</string>
    <string name="main_page_title">SwuAssistant</string>
    <string name="study_materials_title">学习资料</string>
    <string name="library_title">图书馆</string>
    <string name="ecard_title">一卡通</string>
    <string name="grades_title">成绩</string>
    <string name="find_lost_title">失物找寻</string>
    <string name="charge_title">水电费</string>

    <string name="no_user_or_password_error">用户不存在或密码错误</string>
    <string name="not_logged_in">您还没有登录呦</string>
    <string name="net_error_please_check_net">网络错误请检查网络</string>
    <string name="i_know">我知道了</string>
    <string name="login_timeout">登陆超时</string>
    <string name="connect_error">连接出现问题</string>
    <string name="loging_and_wait">正在登录请稍后</string>
    <string name="school_servier_boom">查不出来是服务器的锅╮(╯▽╰)╭</string>

    <string name="you_hava_logined_successful">您已通过登录审核</string>

    <string name="action_settings">Setting</string>
    <string name="remind_time">设置提醒时间</string>
    <string name="remind_time_detail">应用会在距上课设定时间提醒你</string>
    <string name="set_remind_time">设置提醒时间</string>

    <string name="wifi">WiFi</string>
    <string-array name="headway_before_class_string">
        <item>10分钟</item>
        <item>15分钟</item>
        <item>20分钟</item>
    </string-array>
    <string-array name="headway_before_class">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="zmy"><a href="https://www.github.com/mran">Mran</a></string>
    <string name="yk"><a href="https://github.com/youngkaaa/">youngkaaa</a></string>
    <string name="csd"><a href="https://github.com/xndxcsd">xndxcsd</a></string>
    <string name="swuos"><a href="https://github.com/swuos/openswu-android">西南大学开源协会</a></string>
    <string name="tp"><a href="99240947@qq.com">鲨鱼辣椒</a></string>
    <string name="gky"><a href="610524299@qq.com">管苛伊</a></string>

    <string name="fab_name">Fab_Lib</string>
       <string name="my_txt">

        程序计数器

程序计数器是线程私有的区域，很好理解嘛~，每个线程当然得有个计数器记录当前执行到那个指令。占用的内存空间小，可以把它看成是当前线程所执行的字节码的行号指示器。如果线程在执行Java方法，这个计数器记录的是正在执行的虚拟机字节码指令地址；如果执行的是Native方法，这个计数器的值为空（Undefined）。此内存区域是唯一一个在Java虚拟机规范中没有规定任何OutOfMemoryError情况的区域。
Java虚拟机栈

与程序计数器一样，Java虚拟机栈也是线程私有的。其生命周期与线程相同。如何理解虚拟机栈呢？本质上来讲，就是个栈。里面存放的元素叫栈帧，栈帧好像很复杂的样子，其实它很简单！它里面存放的是一个函数的上下文，具体存放的是执行的函数的一些数据。执行的函数需要的数据无非就是局部变量表（保存函数内部的变量）、操作数栈（执行引擎计算时需要），方法出口等等。

执行引擎每调用一个函数时，就为这个函数创建一个栈帧，并加入虚拟机栈。换个角度理解，每个函数从调用到执行结束，其实是对应一个栈帧的入栈和出栈。

注意这个区域可能出现的两种异常：一种是StackOverflowError，当前线程请求的栈深度大于虚拟机所允许的深度时，会抛出这个异常。制造这种异常很简单：将一个函数反复递归自己，最终会出现栈溢出错误（StackOverflowError）。另一种异常是OutOfMemoryError异常，当虚拟机栈可以动态扩展时（当前大部分虚拟机都可以），如果无法申请足够多的内存就会抛出OutOfMemoryError，如何制作虚拟机栈OOM呢，参考一下代码：

    </string>

</resources>
