<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".login.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLoginUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_below="@id/textInputLoginUserName"
                    android:id="@+id/textInputLoginUserPasswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_below="@id/textInputLoginUserPasswd"
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textViewLoginBack"
                    android:visibility="invisible"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/textInputLoginUserPasswd"
                    android:gravity="center"
                    android:text="登录中..."
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>


    <com.swuos.widget.reveal.RevealLayout
        android:id="@+id/reveal_layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <View
            android:id="@+id/reveal_viewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:visibility="invisible"/>

    </com.swuos.widget.reveal.RevealLayout>
</FrameLayout>


